# ai-skills-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json  tools-config.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: config.rs  market.rs  mod.rs  skills.rs  sync.rs  tools.rs
src/components/common/: AppSidebar.vue  ConfirmDialog.vue  EmptyState.vue  PageHeader.vue  StatusBar.vue  TopBar.vue
src/components/market/: MarketCard.vue  MarketItemDetail.vue  SkeletonCard.vue
src/components/settings/: AboutPage.vue  AppearanceSettings.vue  GeneralSettings.vue  MarketSettings.vue
src/components/skills/: BatchActions.vue  BatchEnableDialog.vue  CreateSkillDialog.vue  ImportGithubSkillDialog.vue  SkillCard.vue  SkillDetail.vue  SkillEditor.vue  SkillManageDialog.vue  SkillToolsDialog.vue
src/components/tools/: AddToolDialog.vue  ToolCard.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
src/router/: index.ts
src/stores/: market.ts  settings.ts  skills.ts  tools.ts
src/styles/: main.css
src/types/: index.ts
src/views/: MainLayout.vue  MarketPage.vue  SettingsPage.vue  SkillsPage.vue  ToolsPage.vue
