[package]
name = "ai-skills-manager"
version = "1.0.0"
description = "AI Skills Manager - Centralized skills manager for AI IDEs"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
dirs = "5"
walkdir = "2"
thiserror = "1"
chrono = "0.4"
opener = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
